saving some changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,34 @@
 cmake_minimum_required(VERSION 3.25)
 project(chat LANGUAGES C CXX)
 
-add_executable(${PROJECT_NAME}1
+add_library(networking 
+    networking/socket_tcp.hpp
+    networking/socket_tcp.cpp)
+set_property(TARGET networking PROPERTY CXX_STANDARD 17)
+
+add_executable(chat1
     main.cpp
-    networking/socket_tcp.cpp
-    networking/socket_tcp.hpp
 )
-add_executable(${PROJECT_NAME}2
+target_link_libraries(chat1 networking)
+set_property(TARGET chat1 PROPERTY CXX_STANDARD 17)
+set_property(TARGET chat1 PROPERTY EXPORT_COMPILE_COMMANDS 1)
+target_include_directories(chat1 PRIVATE ${PROJECT_SOURCE_DIR})
+
+add_executable(chat2
     main2.cpp
-    networking/socket_tcp.cpp
-    networking/socket_tcp.hpp
 )
+target_link_libraries(chat2 networking)
+set_property(TARGET chat2 PROPERTY CXX_STANDARD 17)
+set_property(TARGET chat2 PROPERTY EXPORT_COMPILE_COMMANDS 1)
+target_include_directories(chat2 PRIVATE ${PROJECT_SOURCE_DIR})
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
+add_executable(chat
+    chat/events.hpp
+    chat/socket.cpp
+    chat/socket.hpp
+)
+target_link_libraries(chat networking)
+set_property(TARGET chat PROPERTY CXX_STANDARD 17)
+set_property(TARGET chat PROPERTY EXPORT_COMPILE_COMMANDS 1)
+target_include_directories(chat PRIVATE ${PROJECT_SOURCE_DIR})
 
-set_property(TARGET ${PROJECT_NAME}1 ${PROJECT_NAME}2 PROPERTY CXX_STANDARD 17)
